# ez-mq

./: CMakeLists.txt  README.md  preconfig.cmake
include/ez/: MQCore.hpp
src/: MQCore.cpp
test/: CMakeLists.txt
test/basic/: main.cpp
